# prompt-manager

./: .gitignore  AGENTS.md  README.md  README_zh.md  更新迭代prompt记录.md
backend_fastapi/: .env  pyproject.toml
backend_fastapi/src/app/: config.py  db.py  dependencies.py  main.py  utils.py
backend_fastapi/src/app/routers/: categories.py  export.py  projects.py  prompts.py  settings.py  tags.py
backend_fastapi/src/app/schemas/: models.py
backend_fastapi/src/app/services/: aliyun_service.py  diff_service.py  provider_service.py  settings_store.py  version_service.py
frontend/: vite.config.ts
frontend/public/: config.js
frontend/src/components/: CreatePromptModal.tsx
frontend/src/pages/: Settings.tsx  TestPrompt.tsx  VersionDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: models.ts
