[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-manager-backend"
version = "0.1.0"
description = "FastAPI-based backend for Prompt Manager"
authors = [
  {name = "Prompt Manager Maintainers"}
]
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "motor==3.6.0",
  "pydantic==2.7.4",
  "pydantic-settings==2.3.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "diff-match-patch==20230430",
  "sse-starlette==1.8.2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
